IN DEVELOPMENT

  IMPROVEMENTS:

    * Support bzr:// urls to work with the new RPC-based transport which will be
      used with the upcoming high-performance smart server. The new command
      ``bzr serve`` will invoke bzr in server mode, which processes these
      requests. (Andrew Bennetts, Robert Collins, Martin Pool)

  BUG FIXES:
    * revert now removes newly-added directories (Aaron Bentley, #54172)

    * ``bzr upgrade sftp://`` shouldn't fail to upgrade v6 branches if there 
      isn't a working tree. (David Allouche, #40679)

    * Handle when LANG is not recognized by python. Emit a warning, but
      just revert to using 'ascii'. (John Arbash Meinel, #35392)

  INTERNALS:

    * Transport.list_dir() and Transport.iter_files_recursive() should always
      return urlescaped paths. This is now tested (there were bugs in a few
      of the transports) (Andrew Bennetts, David Allouche, John Arbash Meinel)

bzr 0.10.0RC1  2006-08-28
  
  IMPROVEMENTS:
    * 'merge' now takes --uncommitted, to apply uncommitted changes from a
      tree.  (Aaron Bentley)
  
    * 'bzr add --file-ids-from' can be used to specify another path to use
      for creating file ids, rather than generating all new ones. Internally,
      the 'action' passed to smart_add_tree() can return file_ids that
      will be used, rather than having bzrlib generate new ones.
      (John Arbash Meinel, #55781)

    * ``bzr selftest --benchmark`` now allows a ``--cache-dir`` parameter.
      This will cache some of the intermediate trees, and decrease the
      setup time for benchmark tests. (John Arbash Meinel)

    * Inverse forms are provided for all boolean options.  For example,
      --strict has --no-strict, --no-recurse has --recurse (Aaron Bentley)

    * Serialize out Inventories directly, rather than using ElementTree.
      Writing out a kernel sized inventory drops from 2s down to ~350ms.
      (Robert Collins, John Arbash Meinel)

  BUG FIXES:
